--- a/css/style.css
+++ b/css/style.css
@@ -59,8 +59,36 @@
     font-weight: bold;
 }
 
-/* Home */
 
+/* Message system */
+
+.msg-container {
+    background-color: #000;
+    padding: 15px;
+}
+
+.msg {
+    width: 60%;
+    margin: 0 auto;
+    padding: 10px;
+    border: solid 1px #000;
+    text-align: center;
+    border-radius: 5px;
+}
+
+.msg.error {
+    color: #842029;
+    background-color: #F8D7DA;
+    border-color: #F5C2C7;
+}
+
+.msg.success {
+    color: #0F5132;
+    background-color: #D1E7DD;
+    border-color: #BADBCC;
+}
+
+/* Home */
 /* corpo do site */
 #main-container {
     background-color: #000;
