make a auth page css

--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,39 @@
     padding: 40px;
 } 
 
+/* Auth page */
+#auth-row {
+    justify-content: space-evenly;
+}
+
+#login-container h2,
+#register-container h2 {
+    text-align: center;
+    border-bottom: solid 2px #F5C518;
+    width: 200px;
+    margin: 0 auto;
+    padding: 10px;
+}
+
+#login-container form,
+#register-container form {
+    max-width: 400px;
+    margin: 30px auto;
+}
+
+.card-btn {
+    color: #000;
+    background-color: #F5C518;
+    border: solid 2px #F5C518;
+    width: 100%;
+}
+
+.card-btn:hover {
+    background-color: transparent;
+    color: #F5C518;
+    border-color: #F5C518;
+}
+
 /* footer */
 
 #footer {
